Add JWT auth with token generation, validation, auto-refresh, and role-based access control (ADMIN/EMPLOYEE/CUSTOMER). Protected routes configured for /admin/** and /employee/**."